changed html for upcoming componnet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <div class = 'topbar'>
             <h1 id = 'about'>ABOUT</h1>
                 <div id = 'logo'>
-                 <img id = 'SPFClogo'src="../assets/SaoPaulo.png" alt="Sao Paulo Team logo">
+                 <img id = 'SPFClogo'src="../assets/1776.png" alt="Sao Paulo Team logo">
                 </div>
         </div>
 
@@ -23,7 +23,7 @@
             <table id = 'previousMatchContent'>
                 <tr style = "vertical-align: bottom">
                     <td style = "text-align: right"><img src="../assets/1776.png" width="36" height="36" style = "margin-right: 20px">Sao Paulo</td>
-                    <td id = 'score'>1 - 0</td>
+                    <td id = 'score'>-</td>
                     <td style = "text-align: left">Palmeiras<img src="../assets/Palmeiras.png" width="36" height="36" style = "margin-left: 20px"></td>
                 </tr>
 
