--- a/src/app/h2h/h2h.component.html
+++ b/src/app/h2h/h2h.component.html
@@ -1,6 +1,9 @@
-
-
-<p>
-  h2h works!
-</p>
-
+<div class = 'h2h-component'>
+  <table>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+</div>
