--- a/src/app/past-games/past-games.component.html
+++ b/src/app/past-games/past-games.component.html
@@ -1,4 +1,18 @@
-
-<p>
-  past-games works!
-</p>
+<div class  = 'previousMatch' >
+  <table id = 'previousMatchContent'>
+      <tr style = "vertical-align: bottom">
+          <td><img src="../assets/1776.png" width="70" height="70" style = "margin-left: 30px"></td>
+          <td>
+            <div>
+              <table>
+                <tr style = "line-height: 40px">team name one - team name 2</tr>
+                <tr style = "text-align: center; vertical-align: bottom">
+                  <td><span style = "vertical-align: bottom; background-color: #e3e3e3; border-radius: 10px 10px 0px 0px; padding: 3px 15px 7px 15px;">April 20</span></td>
+                </tr>
+              </table>
+            </div>
+          </td>
+          <td><img src="../assets/1776.png" width="70" height="70" style = "margin-right: 30px"></td>
+      </tr>
+  </table>
+</div>
