--- a/src/app/h2h/h2h.component.html
+++ b/src/app/h2h/h2h.component.html
@@ -1,9 +1,9 @@
 <div class = 'h2h-component'>
   <table>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>hello</td>
+      <td>hello</td>
+      <td>hello</td>
     </tr>
   </table>
 </div>
