--- a/src/app/h2h/h2h.component.css
+++ b/src/app/h2h/h2h.component.css
@@ -2,5 +2,12 @@
     border: 2px solid #e3e3e3;
     width: 800px;
     height: 120px;  
-    border-collapse: collapse;
 }
+
+table {
+    border-collapse: collapse;
+  }
+  
+  table, th, td {
+    border: 1px solid #e3e3e3;
+  }
