--- a/src/app/h2h/h2h.component.html
+++ b/src/app/h2h/h2h.component.html
@@ -1,9 +1,37 @@
+<section>
+<img src="../assets/1776.png" width="150" height="150" style = "position: relative; top: 35px">
+
 <div class = 'h2h-component'>
-  <table>
+  <table id = "winsDraws">
+    <tr style = "line-height: 80px; font-size: 50px">
+      <td id = "wins1">1</td>
+      <td id = "wins1">3</td>
+      <td>1</td>
+    </tr>
     <tr>
-      <td>hello</td>
-      <td>hello</td>
-      <td>hello</td>
+      <td id = "wins1" style = "vertical-align: bottom"><span style = "vertical-align: bottom; background-color: #e3e3e3; border-radius: 10px 10px 0px 0px; padding: 3px 15px 3px 15px;">WINS</span></td>
+      <td id = "wins1" style = "vertical-align: bottom"><span style = "vertical-align: bottom; background-color: #e3e3e3; border-radius: 10px 10px 0px 0px; padding: 3px 15px 3px 15px;">DRAWS</span></td>
+      <td style = "vertical-align: bottom"><span style = "vertical-align: bottom; background-color: #e3e3e3; border-radius: 10px 10px 0px 0px; padding: 3px 15px 3px 15px;">WINS</span></td>
     </tr>
   </table>
 </div>
+
+<div class  = 'previousMatch' >
+    <table id = 'previousMatchContent' style="margin-left: auto; margin-right:auto;">
+        <tr style = "vertical-align: bottom">
+            <td><img src="../assets/1776.png" width="70" height="70" style = "margin-left: 30px"></td>
+            <td>
+              <div>
+                <table>
+                  <tr style = "line-height: 40px">home team name 1 - 3 away team name</tr>
+                  <tr style = "text-align: center; vertical-align: bottom">
+                    <td><span style = "vertical-align: bottom; background-color: #e3e3e3; border-radius: 10px 10px 0px 0px; padding: 3px 15px 7px 15px;">April 20</span></td>
+                  </tr>
+                </table>
+              </div>
+            </td>
+            <td><img src="../assets/1776.png" width="70" height="70" style = "margin-right: 30px"></td>
+        </tr>
+    </table>
+  </div>
+</section>
