--- a/src/app/past-games/past-games.component.html
+++ b/src/app/past-games/past-games.component.html
@@ -5,7 +5,7 @@
           <td>
             <div>
               <table>
-                <tr style = "line-height: 40px">team name one - team name 2</tr>
+                <tr style = "line-height: 40px">home team name 1 - 3 away team name</tr>
                 <tr style = "text-align: center; vertical-align: bottom">
                   <td><span style = "vertical-align: bottom; background-color: #e3e3e3; border-radius: 10px 10px 0px 0px; padding: 3px 15px 7px 15px;">April 20</span></td>
                 </tr>
