--- a/src/app/h2h/h2h.component.css
+++ b/src/app/h2h/h2h.component.css
@@ -1,13 +1,66 @@
 .h2h-component{
-    border: 2px solid #e3e3e3;
-    width: 800px;
+    width: 60%;
     height: 120px;  
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+    font-weight: 300;
+    font-size: 14px;
+    letter-spacing: 0.15em;
+    position: relative;
+    top: -100px;
+    margin: auto;
 }
 
-table {
+table#winsDraws {
     border-collapse: collapse;
+    width: 90%;
+    height: 100px;
+    border: 2px solid #e3e3e3;
+  }
+td#wins1{
+    border-right: 2px solid #e3e3e3;
+}
+
+p{
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 40px;
+    letter-spacing: 0.23em;
+    text-align: center;
   }
   
-  table, th, td {
-    border: 1px solid #e3e3e3;
+  table{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .previousMatch { 
+    position: relative;
+    top: 0px;
+    margin: auto;
+  }
+  
+  #previousMatchContent{
+    border: 2px solid #e3e3e3;
+    width: 45%;
+    height: 80px;  
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 15px;
+    text-align: center;
+    letter-spacing: 0.15em;
+  }
+  
+  #score{
+    width:50px;
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+    font-weight: 500;
+    font-size: 12px;
+  
   }
