--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
       </div>
 
 
-      <div class  = 'previousMatch' >
+      <div class  = 'nextMatch' >
         <p style = "margin: 0">NEXT MATCH</p>
         <table id = 'previousMatchContent'>
             <tr style = "vertical-align: bottom">
