--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -60,10 +60,16 @@ border-bottom: 5px solid red;
   top: 140px;
 }
 
+.nextMatch{
+  position: relative;
+  top: 180px;
+}
+
 .navbar{
   position: relative;
   top: 220px;
   width: 100%;
+  height: 65px;
   float: center;
   padding: 1060;
   background-color: #f2f2f2;
@@ -72,7 +78,7 @@ border-bottom: 5px solid red;
   color: white;
   font-weight: 500;
   font-size: 24px;
-  line-height: 55px;
+  line-height: 40px;
   text-align: center;
   letter-spacing: 0.23em;
 }
