--- a/src/app/upcoming-games/upcoming-games.component.css
+++ b/src/app/upcoming-games/upcoming-games.component.css
@@ -30,6 +30,7 @@
     line-height: 15px;
     text-align: center;
     letter-spacing: 0.15em;
+    margin-bottom: 10px;
   }
   
   #score{
@@ -40,3 +41,38 @@
     font-size: 12px;
   
   }
+
+ 
+
+  
+
+table#previousMatchContent:nth-child(even) {
+    background:#E3E3E3;
+ 
+   
+}
+
+table:nth-child(even) tr td#mylistcolor{
+  
+  background:#E3E3E3;
+
+ 
+}
+table#previousMatchContent:nth-child(odd)  {
+    background-color: #FFFFFF;
+   
+
+}
+
+span {
+  vertical-align: bottom;
+  background-color: #e3e3e3; 
+  border-radius: 10px 10px 0px 0px; 
+  padding: 3px 15px 7px 15px;
+}
+
+table#previousMatchContent:nth-child(even) span{
+  background:#ffffff;
+
+ 
+}
