past games done

--- a/src/app/past-games/past-games.component.html
+++ b/src/app/past-games/past-games.component.html
@@ -1,18 +1,20 @@
 <div class  = 'previousMatch' >
-  <table id = 'previousMatchContent'>
-      <tr style = "vertical-align: bottom">
-          <td><img src="../assets/1776.png" width="70" height="70" style = "margin-left: 30px"></td>
-          <td>
-            <div>
-              <table>
-                <tr style = "line-height: 40px">home team name 1 - 3 away team name</tr>
-                <tr style = "text-align: center; vertical-align: bottom">
-                  <td><span style = "vertical-align: bottom; background-color: #e3e3e3; border-radius: 10px 10px 0px 0px; padding: 3px 15px 7px 15px;">April 20</span></td>
-                </tr>
-              </table>
-            </div>
-          </td>
-          <td><img src="../assets/1776.png" width="70" height="70" style = "margin-right: 30px"></td>
-      </tr>
-  </table>
-</div>
+    <table *ngFor="let item of pastGames" id = 'previousMatchContent' >
+      
+        <tr  style = "vertical-align: bottom; padding: 10px">
+            <td><img src="../assets/{{item.homeTeam.id}}.png" width="70" height="70" style = "margin-left: 30px"></td>
+            <td id ='mylistcolor' style="text-align: center">
+             
+                <table>
+                  <tr style = "line-height: 40px">{{item.homeTeam.name}} {{item.score.fullTime.homeTeam}} - {{item.score.fullTime.awayTeam}} {{item.awayTeam.name}}</tr>
+                  <tr style = "text-align: center; vertical-align: bottom">
+                    <td><span>{{getDate(item)}}</span></td>
+                  </tr>
+                </table>
+              
+            </td>
+            <td><img src="../assets/{{item.awayTeam.id}}.png" width="70" height="70" style = "margin-right: 30px"></td>
+        </tr>
+  
+    </table>
+  </div>
