--- a/src/app/past-games/past-games.component.css
+++ b/src/app/past-games/past-games.component.css
@@ -17,12 +17,11 @@
   .previousMatch { 
     position: relative;
     top: 30px;
-    margin: auto;
   }
   
   #previousMatchContent{
     border: 2px solid #e3e3e3;
-    width: 45%;
+    width: 600px;
     height: 80px;  
     font-family: 'Montserrat', sans-serif;
     color: black;
@@ -31,6 +30,7 @@
     line-height: 15px;
     text-align: center;
     letter-spacing: 0.15em;
+    margin-bottom: 10px;
   }
   
   #score{
@@ -41,3 +41,27 @@
     font-size: 12px;
   
   }
+
+table#previousMatchContent:nth-child(even) {
+    background:#E3E3E3;
+}
+
+table:nth-child(even) tr td#mylistcolor{
+  background:#E3E3E3;
+}
+table#previousMatchContent:nth-child(odd)  {
+    background-color: #FFFFFF;
+}
+
+span {
+  vertical-align: bottom;
+  background-color: #e3e3e3; 
+  border-radius: 10px 10px 0px 0px; 
+  padding: 3px 15px 7px 15px;
+}
+
+table#previousMatchContent:nth-child(even) span{
+  background:#ffffff;
+
+ 
+}
