--- a/src/app/upcoming-games/upcoming-games.component.css
+++ b/src/app/upcoming-games/upcoming-games.component.css
@@ -21,7 +21,7 @@
   
   #previousMatchContent{
     border: 2px solid #e3e3e3;
-    width: 600px;
+    width: 40%;
     height: 80px;  
     font-family: 'Montserrat', sans-serif;
     color: black;
