--- a/src/app/upcoming-games/upcoming-games.component.css
+++ b/src/app/upcoming-games/upcoming-games.component.css
@@ -65,3 +65,10 @@ table#previousMatchContent:nth-child(even) span{
 
  
 }
+
+
+@media screen and (max-width: 600px) {
+  #previousMatchContent{
+    width: 100%;
+  }
+}
