--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,34 @@
+
+ 
+
+
+
+
+ @-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes slide-in-left{0%{-webkit-transform:translateX(-1000px);transform:translateX(-1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}@keyframes slide-in-left{0%{-webkit-transform:translateX(-1000px);transform:translateX(-1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}
+@-webkit-keyframes slide-in-right{0%{-webkit-transform:translateX(1000px);transform:translateX(1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}@keyframes slide-in-right{0%{-webkit-transform:translateX(1000px);transform:translateX(1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}
+.fade-in {
+	-webkit-animation: fade-in 3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: fade-in 3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+.slide-in-left{-webkit-animation:slide-in-left 5s cubic-bezier(.25,.46,.45,.94);animation:slide-in-left 5s cubic-bezier(.25,.46,.45,.94)}
+.slide-in-right{-webkit-animation:slide-in-right 5s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-right 5s cubic-bezier(.25,.46,.45,.94) both}
 .myclasssize{
   height: 687px;
 }
@@ -130,10 +161,17 @@ li a:hover{
   padding-right: 10px;
 }
 
+span {
+  vertical-align: bottom;
+  background-color: #e3e3e3; 
+  border-radius: 10px 10px 0px 0px; 
+  padding: 3px 15px 10px 15px;
+}
+
 #previousMatchContent{
   border-radius: 25px;
   border: 2px solid #e3e3e3;
-  width: 400px;
+  width: 500px;
   height: 80px;  
   font-family: 'Montserrat', sans-serif;
   color: black;
@@ -153,7 +191,7 @@ li a:hover{
 
 }
 
-@media screen and (max-width: 1950px) {
+/* @media screen and (max-width: 1950px) {
   li a{
     padding: 15px 100px;
   }
@@ -234,8 +272,29 @@ li a:hover{
   li a{
     padding: 15px 30px; 
   }
-}
+} */
 
+@media screen and (min-width: 1101px) {
+  #li-h2h, #li-tb, #li-sq{
+    width: 14%;
+    height: 65px;
+    
+    text-align: center;
+  }
+
+  #li-pg, #li-ug{
+    width: 29%;
+    height: 65px;
+    
+    text-align: center;
+  }
+  
+
+  li a{
+    padding: 12.5px 0 7.5px 0;
+  }
+
+}
 
 @media screen and (max-width: 1100px) {
   li {
@@ -248,4 +307,10 @@ li a:hover{
     height: 1050px;
   }
   
+}
+
+@media screen and (max-width: 500px) {
+  #previousMatchContent{
+    width: 100%;
+  }
 }
