--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -24,11 +24,11 @@
 @-webkit-keyframes slide-in-left{0%{-webkit-transform:translateX(-1000px);transform:translateX(-1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}@keyframes slide-in-left{0%{-webkit-transform:translateX(-1000px);transform:translateX(-1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}
 @-webkit-keyframes slide-in-right{0%{-webkit-transform:translateX(1000px);transform:translateX(1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}@keyframes slide-in-right{0%{-webkit-transform:translateX(1000px);transform:translateX(1000px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}
 .fade-in {
-	-webkit-animation: fade-in 3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	        animation: fade-in 3s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	-webkit-animation: fade-in 2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: fade-in 2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
-.slide-in-left{-webkit-animation:slide-in-left 5s cubic-bezier(.25,.46,.45,.94);animation:slide-in-left 5s cubic-bezier(.25,.46,.45,.94)}
-.slide-in-right{-webkit-animation:slide-in-right 5s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-right 5s cubic-bezier(.25,.46,.45,.94) both}
+.slide-in-left{-webkit-animation:slide-in-left 2s cubic-bezier(.25,.46,.45,.94);animation:slide-in-left 2s cubic-bezier(.25,.46,.45,.94)}
+.slide-in-right{-webkit-animation:slide-in-right 2s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-right 2s cubic-bezier(.25,.46,.45,.94) both}
 .myclasssize{
   height: 687px;
 }
@@ -57,6 +57,14 @@ background-color: black;
 
 li {
 float: left;
+}
+
+#fs{
+  width:50px;
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+  font-weight: 500;
+  font-size: 14px;
 }
 
 
@@ -191,88 +199,6 @@ span {
 
 }
 
-/* @media screen and (max-width: 1950px) {
-  li a{
-    padding: 15px 100px;
-  }
-}
-@media screen and (max-width: 1900px) {
-  li a{
-    padding: 15px 100px;
-  }
-}
-@media screen and (max-width: 1850px) {
-  li a{
-    padding: 15px 95px; 
-  }
-}
-@media screen and (max-width: 1800px) {
-  li a{
-    padding: 15px 90px; 
-  }
-}
-
-@media screen and (max-width: 1750px) {
-  li a{
-    padding: 15px 85px; 
-  }
-}
-@media screen and (max-width: 1700px) {
-  li a{
-    padding: 15px 80px; 
-  }
-}
-
-@media screen and (max-width: 1600px) {
-  li a{
-    padding: 15px 75px; 
-  }
-}
-@media screen and (max-width: 1550px) {
-  li a{
-    padding: 15px 70px; 
-  }
-}
-
-@media screen and (max-width: 1500px) {
-  li a{
-    padding: 15px 65px;
-  }
-}
-@media screen and (max-width: 1450px) {
-  li a{
-    padding: 15px 60px; 
-  }
-}
-@media screen and (max-width: 1400px) {
-  li a{
-    padding: 15px 55px; 
-  }
-}
-
-@media screen and (max-width: 1350px) {
-  li a{
-    padding: 15px 50px; 
-  }
-}
-
-@media screen and (max-width: 1300px) {
-  li a{
-    padding: 15px 45px; 
-  }
-}
-
-@media screen and (max-width: 1250px) {
-  li a{
-    padding: 15px 40px; 
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  li a{
-    padding: 15px 30px; 
-  }
-} */
 
 @media screen and (min-width: 1101px) {
   #li-h2h, #li-tb, #li-sq{
@@ -303,6 +229,7 @@ span {
   border-right: 0pt;
   width: 100%;
   }
+  
   .myclasssize{
     height: 1050px;
   }
@@ -311,6 +238,9 @@ span {
 
 @media screen and (max-width: 500px) {
   #previousMatchContent{
-    width: 100%;
+    width: 90%;
+  }
+  li a {
+    font-size: 15px;
   }
 }
