--- a/src/app/upcoming-games/upcoming-games.component.css
+++ b/src/app/upcoming-games/upcoming-games.component.css
@@ -69,6 +69,12 @@ table#previousMatchContent:nth-child(even) span{
 
 @media screen and (max-width: 600px) {
   #previousMatchContent{
-    width: 100%;
+    width: 70%;
   }
+}
+@media screen and (max-width: 300px) {
+  #previousMatchContent{
+    width: 90%;
+  }
+  
 }
