--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -140,6 +140,22 @@ li a:hover{
   text-align: right;
   letter-spacing: 0.23em;
   margin: 0;
+  cursor: pointer;
+}
+
+#about2{
+  font-family: 'Montserrat', sans-serif;
+  vertical-align: middle;
+  color: black;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 80px;
+  text-align: right;
+  letter-spacing: 0.23em;
+  margin: 0;
+  cursor: pointer;
+  padding-right: 20px;
+  padding-top: 10px;
 }
 
 #SPFClogo{
@@ -148,6 +164,16 @@ li a:hover{
   top: 0;
   width: 180px;
   height: 180px;
+}
+
+#aboutdiv{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 2000px;
+  background-color: #F0F0F0;
+  display: none;
+  opacity: 0.97;
 }
 
 #logo{
@@ -244,3 +270,4 @@ span {
     font-size: 15px;
   }
 }
+
