--- a/src/app/h2h/h2h.component.html
+++ b/src/app/h2h/h2h.component.html
@@ -1,7 +1,14 @@
 <section>
-  <div id='logo'>
-    <img class='fade-in' id='SPFClogo' src="../assets/1776.png" alt="Sao Paulo Team logo" style=" width: 120px; height: 120px;">
-  </div>
+
+  <div class='h2h-component'>
+      <table id="tablelogo">
+        <tr style="line-height: 80px; font-size: 50px">
+          <td><img class='fade-in' id='SPFClogo' src="../assets/1776.png" alt="Sao Paulo Team logo" style=" width: 120px; height: 120px;"></td>
+          <td style = "width: 60px"></td>
+          <td><img class='fade-in' id='SPFClogo' src="../assets/1779.png" alt="Sao Paulo Team logo" style="width: 120px; height: 120px;"></td>
+        </tr>
+      </table>
+    </div>
 
   <div class='h2h-component'>
     <table id="winsDraws">
@@ -22,10 +29,6 @@
         </td>
       </tr>
     </table>
-  </div>
-
-  <div id='logo'>
-    <img class='fade-in' id='SPFClogo' src="../assets/1779.png" alt="Sao Paulo Team logo" style="width: 120px; height: 120px;">
   </div>
 
   <div class='previousMatch'>
