--- a/src/app/h2h/h2h.component.css
+++ b/src/app/h2h/h2h.component.css
@@ -17,6 +17,12 @@ table#winsDraws {
     height: 100px;
     border: 2px solid #e3e3e3;
   }
+
+table#tablelogo{
+  width: 90%;
+  height: 100px;
+}
+
 td#wins1{
     border-right: 2px solid #e3e3e3;
 }
